# robotxq

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
conf/: Makefile.am  xq.brd  xq.fen
doc/: Makefile.am  cchess.sty  manual.aux  manual.out  manual.tex  manual.toc
src/: Makefile.am  catboard.c  cpopen.c  cpopen.h  interface.c  interface.h  main.c  read_board.c  read_board.h  robotxq.c  xiangqi.c  xiangqi.h
src/eleeye_xb/: Makefile.am  cchess.cpp  eleeye.cpp  evaluate.cpp  evaluate.h  movesort.h  preeval.cpp  preeval.h  search.cpp  search.h  xboard.cpp  xboard.h
src/io/: Makefile.am  Makefile.am~  io_board.c  io_hand.c
src/io_board/: Makefile.am  io_board.c  read_port.c
src/learn_brd/: Makefile.am  learn_brd.c
