bin_PROGRAMS = eleeye_xb

eleeye_xb_CXXFLAGS= $(AM_CPPFLAGS)

eleeye_xb_SOURCES = book.cpp eleeye.cpp genmoves.cpp hash.cpp movesort.cpp pipe.cpp position.cpp pregen.cpp search.cpp xboard.cpp cchess.cpp preeval.cpp evaluate.cpp

eleeye_xb_LDFLAGS= -ldl

noinst_HEADERS = base2.h  base.h  book.h  cchess.h  evaluate.h  hash.h  mips.h  movesort.h  parse.h  pipe.h  position.h  preeval.h  pregen.h  rc4prng.h  search.h  xboard.h  x86asm.h
